--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,6 +33,9 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
 
