feat: implement API server scaffold with health endpoint and error handling
- Set up Express server with clean architecture (routes/controllers/middleware/db)
- Add centralized error handling with Prisma error support
- Implement request logging middleware
- Create /api/health endpoint with database connectivity check
- Set up Prisma client singleton with graceful shutdown
- Add async error handler wrapper for route handlers
- Update TypeScript config for ES module support

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -5,8 +5,10 @@
     "rootDir": "./src",
     "module": "ESNext",
     "target": "ES2022",
-    "moduleResolution": "bundler",
-    "types": ["node"]
+    "moduleResolution": "node",
+    "types": ["node"],
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
