feat: add Docker Compose setup for local development
- Create docker-compose.yml with postgres, api, and web services
- Add Dockerfiles for API and web (development and production stages)
- Configure environment variable wiring for all services
- Add health checks and volume mounts for hot-reload
- Create nginx config for production web serving
- Add .dockerignore and .env.docker example
- Update Vite config for Docker container access
- Add Docker scripts to package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "clean": "pnpm --recursive clean",
     "db:migrate": "pnpm --filter api db:migrate",
     "db:seed": "pnpm --filter api db:seed",
-    "db:studio": "pnpm --filter api db:studio"
+    "db:studio": "pnpm --filter api db:studio",
+    "docker:up": "docker compose up",
+    "docker:down": "docker compose down",
+    "docker:build": "docker compose build",
+    "docker:logs": "docker compose logs -f"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.15.0",
