--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "pnpm": "^10.26.1",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
@@ -33,4 +34,3 @@
     "pnpm": ">=8.0.0"
   }
 }
-
