chore: enhance environment variable documentation and hygiene
- Add comprehensive comments to .env.example explaining each variable
- Organize .env.example into logical sections with clear headers
- Document optional Docker override variables
- Document TEST_DATABASE_URL for test isolation
- Update README to reference .env.example for detailed comments
- Fix RUNBOOK to clarify Docker env var handling (remove .env.docker reference)
- Verify no hardcoded secrets in source code

This ensures developers understand what each environment variable does
and how to configure the platform correctly for different environments.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,49 @@
-# Database
+# UF Research Metrics Platform - Environment Variables
+# Copy this file to .env and update values for your environment
+
+# ============================================================================
+# Database Configuration
+# ============================================================================
+# PostgreSQL connection string for the API service
+# Format: postgresql://[user]:[password]@[host]:[port]/[database]?schema=public
+# For local development: postgresql://postgres:postgres@localhost:5432/uf_research_metrics?schema=public
+# For Docker: Use the connection string from docker-compose.yml (auto-configured)
 DATABASE_URL="postgresql://user:password@localhost:5432/uf_research_metrics?schema=public"
 
-# API
+# ============================================================================
+# API Service Configuration
+# ============================================================================
+# Port on which the API server will listen
+# Default: 3001
 API_PORT=3001
+
+# Node.js environment (development, production, test)
+# Controls logging, error details, and some behavior
+# Default: development
 NODE_ENV=development
 
-# Web
+# ============================================================================
+# Web Application Configuration
+# ============================================================================
+# Base URL of the API server (used by frontend to make requests)
+# For local development: http://localhost:3001
+# For Docker: http://localhost:3001 (browser connects to host)
+# For production: Update to your production API URL
 VITE_API_URL=http://localhost:3001
+
+# ============================================================================
+# Docker Compose Overrides (optional)
+# ============================================================================
+# These are used by docker-compose.yml if you need to override defaults
+# POSTGRES_USER=postgres
+# POSTGRES_PASSWORD=postgres
+# POSTGRES_DB=uf_research_metrics
+# POSTGRES_PORT=5432
+# WEB_PORT=3000
+
+# ============================================================================
+# Testing (optional)
+# ============================================================================
+# Separate database URL for running tests (prevents test data pollution)
+# If not set, tests will use DATABASE_URL
+# TEST_DATABASE_URL="postgresql://user:password@localhost:5432/uf_research_metrics_test?schema=public"
