--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,14 @@ jobs:
         working-directory: apps/api
         run: pnpm exec prisma migrate deploy
       
+      - name: Verify database is ready
+        working-directory: apps/api
+        run: |
+          # Small delay to ensure migrations are fully applied
+          sleep 2
+          # Simple connection test using Prisma migrate status (non-destructive)
+          pnpm exec prisma migrate status || true
+      
       - name: Run tests
         run: pnpm test
 
