--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "recharts": "^3.6.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -33,4 +34,3 @@
     "vite": "^5.0.8"
   }
 }
-
