feat: wire Insights page to API with KPI tiles and animations
- Install Framer Motion for animations
- Add getInsights method to API client
- Create KPITile component with count-up animation and sparklines
- Wire InsightsPage to fetch data from /api/insights endpoint
- Populate department dropdown from API
- Add page entry animations with staggered KPI tiles
- Display 6 KPIs with sparkline charts from timeseries data

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@uf-research-metrics-platform/shared": "workspace:*",
+    "framer-motion": "^12.23.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
